Progress on Classifieds

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -32,7 +32,7 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: "Raleway", sans-serif;
+  --font-family-sans-serif: "Ubuntu", Tahoma, Arial;
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
@@ -72,7 +72,7 @@ section {
 
 body {
   margin: 0;
-  font-family: "Raleway", sans-serif;
+  font-family: "Ubuntu", Tahoma, Arial;
   font-size: 0.9rem;
   font-weight: 400;
   line-height: 1.6;
@@ -6092,7 +6092,7 @@ button.close {
   z-index: 1070;
   display: block;
   margin: 0;
-  font-family: "Raleway", sans-serif;
+  font-family: "Ubuntu", Tahoma, Arial;
   font-style: normal;
   font-weight: 400;
   line-height: 1.6;
@@ -6217,7 +6217,7 @@ button.close {
   z-index: 1060;
   display: block;
   max-width: 276px;
-  font-family: "Raleway", sans-serif;
+  font-family: "Ubuntu", Tahoma, Arial;
   font-style: normal;
   font-weight: 400;
   line-height: 1.6;
@@ -10001,11 +10001,38 @@ a.text-dark:focus {
 }
 
 body {
-  padding-top: 5rem;
+  background: url("/img/classifieds.png");
+}
+
+main {
+  opacity: 1;
+  background: #f2f2f2;
+  border: 5px solid grey;
+  margin: 3em;
 }
 
 .starter-template {
   padding: 3rem 1.5rem;
   text-align: center;
+}
+
+.logo {
+  float: left;
+}
+
+.headline {
+  float: left;
+  margin-left: 1em;
+  clear: right;
+}
+
+.subtitle {
+  font-size: 18px;
+  float: left;
+  margin-left: 2em;
+}
+
+.navbar-header {
+  width: 80%;
 }
 
