--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -14,10 +14,37 @@
 }
 
 body {
-  padding-top: 5rem;
+  background: url('/img/classifieds.png');
+}
+
+main {
+    opacity: 1;
+    background: #f2f2f2;
+    border: 5px solid grey;
+    margin: 3em;
 }
 
 .starter-template {
   padding: 3rem 1.5rem;
   text-align: center;
+}
+
+.logo {
+    float: left;
+}
+
+.headline {
+    float: left;
+    margin-left: 1em;
+    clear: right;
+}
+
+.subtitle {
+    font-size: 18px;
+    float:left;
+    margin-left: 2em;
+}
+
+.navbar-header {
+    width:80%;
 }
